src/objects/CSM_QI_CaseAutomationScheduler__c.object
<CustomObject>
    <description>CSM-1039 CSM Case Automation Scheduler for Optrack</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSM Case Automation Schedulers</relationshipLabel>
        <relationshipName>CSM_Case_Automation_Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account Name should match with Asset Account.</errorMessage>
            <filterItems>
                <field>Asset.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>CSM Case Automation Schedulers</relationshipLabel>
        <relationshipName>CSM_Case_Automation_Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Categorization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Categorization</label>
        <referenceTo>CSM_QI_Case_Categorization__c</referenceTo>
        <relationshipLabel>CSM Case Automation Schedulers</relationshipLabel>
        <relationshipName>CSM_Case_Automation_Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creation_Date_In_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSM-2168: TECH - Automatic Schedule Case Add DATE in Subject</description>
        <label>Creation Date In Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <defaultValue>(&quot;Laptop&quot;)</defaultValue>
        <label>Device</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>iPhone</fullName>
                </value>
                <value>
                    <fullName>Smartphone</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FrequencyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FrequencyId</label>
        <referenceTo>CSM_QI_Frequency__c</referenceTo>
        <relationshipLabel>CSM Case Automation Schedulers</relationshipLabel>
        <relationshipName>CSM_Case_Automation_Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <defaultValue>(&quot;None&quot;)</defaultValue>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <defaultValue>(&quot;Low&quot;)</defaultValue>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Significant</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Run_Date__c</fullName>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Run_Date__c</fullName>
        <label>Next Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Contact_Known__c</fullName>
        <defaultValue>true</defaultValue>
        <label>No Contact Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <defaultValue>(&quot;External Service&quot;)</defaultValue>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Initiated</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Customer Portal</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>External Service</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pillar__c</fullName>
        <defaultValue>(&quot;Technology Solutions&quot;)</defaultValue>
        <label>Pillar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pillar</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Owner_Current_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Owner Current Queue</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Queue_User_Relationship__c.User__c</field>
                <operation>equals</operation>
                <valueField>$Source.Primary_Owner__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Queue_User_Relationship__c</referenceTo>
        <relationshipLabel>CSM Case Automation Schedulers</relationshipLabel>
        <relationshipName>CSM_Case_Automation_Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSM_Case_Automation_Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Queue_Type__c</fullName>
        <formula>Primary_Owner_Current_Queue__r.Type__c</formula>
        <label>Primary Queue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Asset_Name__r.Name</formula>
        <label>ProductName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner_Current_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner Current Queue</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Queue_User_Relationship__c.User__c</field>
                <operation>equals</operation>
                <valueField>$Source.Secondary_Owner__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Queue_User_Relationship__c</referenceTo>
        <relationshipLabel>CSM Case Automation Schedulers (Secondary Owner Current Queue)</relationshipLabel>
        <relationshipName>CSM_Case_Automation_Schedulers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSM_Case_Automation_Schedulers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Queue_Type__c</fullName>
        <formula>Secondary_Owner_Current_Queue__r.Type__c</formula>
        <label>Secondary Queue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubType1__c</fullName>
        <description>Additional field to record Subtype1 for categorization data</description>
        <label>SubType1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType2__c</fullName>
        <description>Additional field to record Subtype2 for categorization data</description>
        <label>SubType2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType3__c</fullName>
        <description>Additional field to record Subtype3 for categorization data</description>
        <label>SubType3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <defaultValue>(&quot;Low&quot;)</defaultValue>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSM Case Automation Scheduler</label>
    <nameField>
        <displayFormat>CAS-{000000000}</displayFormat>
        <label>CSM Case Automation Scheduler Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSM Case Automation Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CAS_VR01_AssetIsRequired</fullName>
        <active>true</active>
        <description>CSM-1039 automation scheduler for Optrack</description>
        <errorConditionFormula>AND(Active__c, ISBLANK(Asset_Name__c))</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>Asset can&apos;t be null when Active is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAS_VR02_CategorizationIsRequired</fullName>
        <active>true</active>
        <description>CSM-1039 automation scheduler for Optrack</description>
        <errorConditionFormula>AND(Active__c, ISBLANK(Case_Categorization__c))</errorConditionFormula>
        <errorMessage>Categorization should be filled in Categorization component on detail page before activating record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAS_VR03_WeekdayIsRequired</fullName>
        <active>true</active>
        <description>CSM-1039 automation scheduler for Optrack</description>
        <errorConditionFormula>AND(Active__c, 
				ISBLANK(FrequencyId__c), 
				ISPICKVAL(Frequency__c, &apos;Weekly&apos;))</errorConditionFormula>
        <errorMessage>Weekday should be selected in Frequency component on detail page before activating record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAS_VR04_MonthIntervalIsRequired</fullName>
        <active>true</active>
        <description>CSM-1039 automation scheduler for Optrack</description>
        <errorConditionFormula>AND(Active__c,
				ISBLANK(FrequencyId__c),
				OR(ISPICKVAL(Frequency__c, &apos;Monthly&apos;),
						ISPICKVAL(Frequency__c, &apos;Quarterly&apos;)))</errorConditionFormula>
        <errorMessage>Month date/week should be selected in Frequency component on detail page before activating record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAS_VR05_CurrentQueuesAreMandatory</fullName>
        <active>true</active>
        <description>CSM-1039 automation scheduler for Optrack</description>
        <errorConditionFormula>AND(Active__c,ISBLANK(Primary_Owner_Current_Queue__c),ISBLANK(Secondary_Owner_Current_Queue__c))</errorConditionFormula>
        <errorMessage>Primary/Secondary Owner Current Queue can&apos;t be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAS_VR06_AssetAccountCheck</fullName>
        <active>true</active>
        <description>CSM-2251:TECH - Schedule Case Automation - Asset update</description>
        <errorConditionFormula>AND(OR(Active__c, ISCHANGED( Account_Name__c)),Account_Name__c  &lt;&gt;  Asset_Name__r.AccountId)</errorConditionFormula>
        <errorDisplayField>Asset_Name__c</errorDisplayField>
        <errorMessage>Asset Account should be same as selected Account Name</errorMessage>
    </validationRules>
</CustomObject>